--- a/index.html
+++ b/index.html
@@ -2,81 +2,57 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 聯動跳號預測系統 - 優化 v14</title>
+    <title>AI 極端共振系統 - 優化 v15</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e74c3c; --success: #27ae60; --bg: #f4f7f6; }
         body { font-family: "Microsoft JhengHei", sans-serif; background: var(--bg); margin: 0; padding: 20px; }
         .panel { background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); padding: 20px; margin-bottom: 20px; max-width: 1200px; margin: 0 auto; }
         .panel-title { margin: 0 0 15px 0; color: var(--primary); border-left: 5px solid var(--primary); padding-left: 12px; font-size: 1.1rem; }
-        
-        .grid-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px; }
-        .card { background: #f8f9fa; padding: 15px; border-radius: 8px; border-top: 4px solid var(--primary); }
         .num-badge { display: inline-block; background: var(--primary); color: white; border-radius: 4px; padding: 4px 12px; margin: 2px; font-weight: bold; }
         .hit-badge { background: var(--success) !important; box-shadow: 0 0 5px var(--success); }
-
         .table-container { overflow-x: auto; margin-top: 10px; }
         table { border-collapse: collapse; width: 100%; white-space: nowrap; background: white; }
         th, td { border: 1px solid #eee; text-align: center; padding: 8px 4px; font-size: 12px; }
         th { background: var(--primary); color: white; }
         .dot { background: var(--accent); color: white; border-radius: 50%; display: inline-block; width: 20px; height: 20px; line-height: 20px; font-weight: bold; }
-
         .good-hit { background-color: #e8f5e9 !important; border: 2px solid var(--success) !important; }
         .hit-count { font-weight: bold; color: var(--success); font-size: 1.3rem; }
-
-        .accordion-header { cursor: pointer; background: #eee; padding: 12px; border-radius: 6px; font-weight: bold; text-align: center; margin-top: 10px; }
-        .accordion-content { display: none; padding: 20px; line-height: 1.8; background: #fff; border: 1px solid #eee; font-size: 14px; }
     </style>
 </head>
 <body>
 
     <div class="panel">
-        <h3 class="panel-title">1. 數據上傳</h3>
+        <h3 class="panel-title">1. 數據解析 (v15 極端共振版)</h3>
         <input type="file" id="csvFile" accept=".csv">
-        <div id="statusTracker" style="margin-top:15px; display: flex; flex-wrap: wrap; gap: 5px;"></div>
     </div>
 
     <div id="analysisSection" style="display:none;">
         <div class="panel">
-            <h3 class="panel-title">2. AI 聯動跳號預測 (下一期)</h3>
-            <div class="grid-container" id="predictionResults"></div>
+            <h3 class="panel-title">2. AI 極端共振預測 (下一期建議)</h3>
+            <div id="predictionResults"></div>
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">3. 連號分布圖 (恢復功能：最新 10 期)</h3>
+            <h3 class="panel-title">3. 連號分布圖 (最新 10 期)</h3>
             <div class="table-container">
-                <table id="distributionTable"><thead><tr id="chartHeader"></tr></thead><tbody id="chartBody"></tbody></table>
+                <table><thead><tr id="chartHeader"></tr></thead><tbody id="chartBody"></tbody></table>
             </div>
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">4. 滾動回測紀錄 (集彈性優化)</h3>
+            <h3 class="panel-title">4. 滾動回測 (目標：集彈性突破)</h3>
             <div class="table-container">
                 <table>
-                    <thead>
-                        <tr><th>日期</th><th>真實獎號</th><th>預測組合 (v14 策略)</th><th>命中數</th></tr>
-                    </thead>
+                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v15)</th><th>命中</th></tr></thead>
                     <tbody id="backtestBody"></tbody>
                 </table>
             </div>
         </div>
     </div>
 
-    <div class="panel">
-        <div class="accordion-header" onclick="toggleAccordion()">💡 v14 優化重點：跳號共振邏輯</div>
-        <div id="accContent" class="accordion-content">
-            <strong>1. 連號分布圖恢復：</strong><br>
-            重新引入視覺化矩陣，讓您觀察號碼是否在特定區域產生「堆疊」。<br>
-            <strong>2. 跳號共振 (Jump Capture)：</strong><br>
-            系統對「N±2」的跳號（如 15, 17）給予連動加分。這在 539 數據中是命中 2 個號碼的高頻結構。<br>
-            <strong>3. 三區平衡 v3：</strong><br>
-            確保號碼分佈於 01-13、14-26、27-39。若預測組合全部集中在同一區，會自動進行平滑修正。
-        </div>
-    </div>
-
     <script>
         document.getElementById('csvFile').addEventListener('change', function(e) {
             const file = e.target.files[0];
-            if (!file) return;
             const reader = new FileReader();
             reader.onload = e => parseCSV(e.target.result);
             reader.readAsText(file);
@@ -88,22 +64,12 @@
             lines.forEach((line, index) => {
                 const cols = line.split(',').map(s => s.trim());
                 if (index === 0 && isNaN(cols[1])) return;
-                if (cols.length >= 6 && cols[0] !== "") {
-                    data.push({ date: cols[0], nums: cols.slice(1, 6).map(Number).sort((a,b) => a-b) });
-                }
+                if (cols.length >= 6) data.push({ date: cols[0], nums: cols.slice(1, 6).map(Number).sort((a,b)=>a-b) });
             });
             if (data.length > 0) processSystem(data);
         }
 
-        function processSystem(data) {
-            renderChart([...data].slice(-10).reverse());
-            renderStatusTracker(data);
-            runBacktest(data);
-            generateNext(data);
-            document.getElementById('analysisSection').style.display = 'block';
-        }
-
-        function getJumpPick(history) {
+        function getExtremePick(history) {
             const scores = Array(40).fill(0);
             const lastNums = history[history.length - 1].nums;
             
@@ -112,92 +78,51 @@
                 for (let j = history.length - 1; j >= 0; j--) {
                     if (!history[j].nums.includes(i)) miss++; else break;
                 }
-
-                // A. 基礎遺漏加權 (黃金期 4-6)
-                if (miss >= 4 && miss <= 6) scores[i] += 120;
-                else if (miss >= 1 && miss <= 3) scores[i] += 60;
-                else if (miss >= 10) scores[i] += 40;
-
-                // B. 鄰號與跳號 (N±1, N±2)
-                if (lastNums.some(n => Math.abs(n - i) === 1)) scores[i] += 50;
-                if (lastNums.some(n => Math.abs(n - i) === 2)) scores[i] += 30;
+                // 加強極端回歸區 (4-7期) 與 連莊鄰號 (N±1)
+                if (miss >= 4 && miss <= 7) scores[i] += 150; 
+                if (lastNums.some(n => Math.abs(n - i) === 1)) scores[i] += 100;
+                if (miss === 0) scores[i] += 50;
             }
 
             const sorted = Array.from({length: 39}, (_, i) => i + 1).sort((a, b) => scores[b] - scores[a]);
-            const top15 = sorted.slice(0, 15);
-
+            const top12 = sorted.slice(0, 12);
             let final = [];
+
             for (let n of sorted) {
                 if (final.includes(n)) continue;
                 final.push(n);
-
-                // 強制連動邏輯：如果鄰號也在 Top 15，則誘發連號
+                // 鄰號集彈邏輯：強迫成對
                 if (final.length < 5) {
-                    let nextN = n + 1;
-                    if (top15.includes(nextN) && !final.includes(nextN)) final.push(nextN);
+                    let next = n + 1;
+                    if (top12.includes(next) && !final.includes(next)) final.push(next);
                 }
                 if (final.length >= 5) break;
             }
+            return final.slice(0, 5).sort((a,b)=>a-b);
+        }
 
-            return final.slice(0, 5).sort((a, b) => a - b);
+        function processSystem(data) {
+            renderChart([...data].slice(-10).reverse());
+            const tbody = document.getElementById('backtestBody');
+            tbody.innerHTML = '';
+            for (let i = data.length - 1; i > data.length - 11; i--) {
+                const pred = getExtremePick(data.slice(0, i));
+                const hits = pred.filter(n => data[i].nums.includes(n));
+                const tr = document.createElement('tr');
+                if (hits.length >= 2) tr.className = 'good-hit';
+                tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
+                tbody.appendChild(tr);
+            }
+            const nextP = getExtremePick(data);
+            document.getElementById('predictionResults').innerHTML = nextP.map(n=>`<span class="num-badge" style="font-size:1.2rem">${n}</span>`).join('');
+            document.getElementById('analysisSection').style.display = 'block';
         }
 
         function renderChart(data) {
             const header = document.getElementById('chartHeader');
             const body = document.getElementById('chartBody');
-            header.innerHTML = '<th>日期</th>' + Array.from({length: 39}, (_, i) => `<th>${i+1}</th>`).join('');
-            body.innerHTML = data.map(row => {
-                let tr = `<td>${row.date}</td>`;
-                for (let i = 1; i <= 39; i++) tr += `<td>${row.nums.includes(i) ? `<span class="dot">${i}</span>` : ''}</td>`;
-                return `<tr>${tr}</tr>`;
-            }).join('');
-        }
-
-        function runBacktest(allData) {
-            const tbody = document.getElementById('backtestBody');
-            tbody.innerHTML = '';
-            const startIdx = allData.length - 1;
-
-            for (let i = startIdx; i > startIdx - 10 && i >= 0; i--) {
-                const historyBefore = allData.slice(0, i);
-                const actual = allData[i].nums;
-                const pred = getJumpPick(historyBefore);
-                const hits = pred.filter(n => actual.includes(n));
-
-                const tr = document.createElement('tr');
-                if (hits.length >= 2) tr.className = 'good-hit';
-                tr.innerHTML = `
-                    <td>${allData[i].date}</td>
-                    <td>${actual.join(', ')}</td>
-                    <td>${pred.map(n => `<span class="num-badge ${actual.includes(n) ? 'hit-badge' : ''}">${n}</span>`).join('')}</td>
-                    <td class="hit-count">${hits.length}</td>
-                `;
-                tbody.appendChild(tr);
-            }
-        }
-
-        function renderStatusTracker(allData) {
-            const tracker = document.getElementById('statusTracker');
-            const last = allData[allData.length - 1].nums;
-            tracker.innerHTML = '';
-            for (let i = 1; i <= 39; i++) {
-                let count = 0, isHit = last.includes(i);
-                for (let j = allData.length - 1; j >= 0; j--) {
-                    if (allData[j].nums.includes(i) === isHit) count++; else break;
-                }
-                tracker.innerHTML += `<span style="display:inline-block; padding:2px 6px; border-radius:4px; font-size:10px; border:1px solid #ddd; background:${isHit?'#ffeaa7':'#eee'}">${i}:${isHit?'連':'未'}${count}</span>`;
-            }
-        }
-
-        function generateNext(allData) {
-            const res = document.getElementById('predictionResults');
-            const p = getJumpPick(allData);
-            res.innerHTML = `<div class="card"><h4>🎯 AI 聯動預測組合</h4>${p.map(n => `<span class="num-badge" style="font-size:1.2rem; padding:5px 15px;">${n}</span>`).join('')}</div>`;
-        }
-
-        function toggleAccordion() {
-            const c = document.getElementById('accContent');
-            c.style.display = (c.style.display === 'block') ? 'none' : 'block';
+            header.innerHTML = '<th>日期</th>' + Array.from({length:39}, (_, i)=>`<th>${i+1}</th>`).join('');
+            body.innerHTML = data.map(row => `<tr><td>${row.date}</td>${Array.from({length:39}, (_, i)=>`<td>${row.nums.includes(i+1)?`<span class="dot">${i+1}</span>`:''}</td>`).join('')}</tr>`).join('');
         }
     </script>
 </body>
