--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI 539 數據中心 v126</title>
+    <title>AI 539 數據中心 v127</title>
     <style>
         :root { --bg: #000; --panel: #1c1c1e; --primary: #ffd60a; --success: #32d74b; --border: #38383a; --text: #fff; --sub: #8e8e93; }
         body { font-family: -apple-system, system-ui, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 12px; }
@@ -36,15 +36,15 @@
     <div id="mainDisplay" style="display:none;">
         <div class="grid-split">
             <div class="panel">
-                <div class="panel-header">下期預測 (v126 坍縮8碼)</div>
-                <p style="font-size:0.7rem; color:var(--sub);">坍縮核心引力：</p>
+                <div class="panel-header">下期預測 (v127 非對稱8碼)</div>
+                <p style="font-size:0.7rem; color:var(--sub);">超核心坍縮奇點：</p>
                 <div id="anchorBall" class="ball-row"></div>
-                <p style="font-size:0.7rem; color:var(--sub); margin-top:15px;">8碼高密度預測：</p>
+                <p style="font-size:0.7rem; color:var(--sub); margin-top:15px;">8碼密集連動組合：</p>
                 <div id="finalCombo" class="ball-row"></div>
             </div>
 
             <div class="panel">
-                <div class="panel-header">滾動回測 (前10期效能)</div>
+                <div class="panel-header">滾動回測 (攻堅命中3)</div>
                 <div id="btContainer"></div>
             </div>
         </div>
@@ -84,7 +84,7 @@
         mBody.innerHTML = ''; btContainer.innerHTML = '';
 
         for (let i = state.data.length - 1; i >= Math.max(0, state.data.length - 10); i--) {
-            const pred = getV126Pick(state.data.slice(0, i));
+            const pred = getV127Pick(state.data.slice(0, i));
             const real = state.data[i].nums;
             const hits = pred.res.filter(n => real.includes(n));
             const item = document.createElement('div');
@@ -101,45 +101,47 @@
             }
             tr.innerHTML = trHtml; mBody.appendChild(tr);
         }
-        const final = getV126Pick(state.data);
+        const final = getV127Pick(state.data);
         document.getElementById('anchorBall').innerHTML = final.anchors.map(n => `<div class="ball anchor">${n}</div>`).join('');
         document.getElementById('finalCombo').innerHTML = final.res.map(n => `<div class="ball ${final.anchors.includes(n)?'anchor':''}">${n}</div>`).join('');
         document.getElementById('mainDisplay').style.display = 'block';
     }
 
-    function getV126Pick(hist) {
+    function getV127Pick(hist) {
         if(hist.length === 0) return {res:[], anchors:[]};
         let sc = Array(40).fill(0);
-        const last = hist[hist.length-1].nums, recent = hist.slice(-15).flatMap(h => h.nums);
+        const last = hist[hist.length-1].nums, recent = hist.slice(-20).flatMap(h => h.nums);
         let tailF = Array(10).fill(0); recent.forEach(n => tailF[n%10]++);
 
         for (let i=1; i<=39; i++) {
             let gap = 0;
             for(let j=hist.length-1; j>=0; j--) { if(!hist[j].nums.includes(i)) gap++; else break; }
             
-            if(gap >= 5 && gap <= 9) sc[i] += 4800; // 強化黃金反彈
-            else if(gap === 1) sc[i] += 3200;
-            else if(gap === 0) sc[i] += 2000; 
+            if(gap >= 5 && gap <= 9) sc[i] += 5200; // v127: 提高反彈基重
+            else if(gap === 1) sc[i] += 3500;
+            else if(gap === 0) sc[i] += 2200; 
 
-            sc[i] += tailF[i%10] * 900; 
-            if(last.some(ln => Math.abs(ln-i) === 1)) sc[i] += 1800; // 斜連加壓
+            sc[i] += tailF[i%10] * 950; 
+            if(last.some(ln => Math.abs(ln-i) === 1)) sc[i] += 2200; // 斜連加壓
         }
 
         let sorted = Array.from({length:39},(_,i)=>i+1).sort((a,b)=>sc[b]-sc[a]);
-        let anchors = [sorted[0], sorted[1]];
+        // 非對稱三核心：一個超核心，兩個輔助區
+        let anchors = [sorted[0], sorted[1], sorted[2]];
         let res = [...anchors];
-        let collSc = [...sc];
+        let asymSc = [...sc];
         
-        // 坍縮加權：強制同尾與鄰號結合
-        anchors.forEach(a => {
+        // 奇點非對稱加權
+        anchors.forEach((a, idx) => {
+            let gravity = (idx === 0) ? 6000 : 3500; // 對第一核心實施超重磁吸
             for(let i=1; i<=39; i++) {
-                if(Math.abs(i - a) <= 1) collSc[i] += 5000; // 強連號磁吸
-                if(i % 10 === a % 10) collSc[i] += 3500;    // 強同尾磁吸
+                if(Math.abs(i - a) <= 2) asymSc[i] += gravity; 
+                if(i % 10 === a % 10) asymSc[i] += (gravity * 0.7);
             }
         });
 
-        let collSorted = Array.from({length:39},(_,i)=>i+1).sort((a,b)=>collSc[b]-sc[a]);
-        for(let n of collSorted) {
+        let asymSorted = Array.from({length:39},(_,i)=>i+1).sort((a,b)=>asymSc[b]-sc[a]);
+        for(let n of asymSorted) {
             if(res.length >= 8) break;
             if(!res.includes(n)) res.push(n);
         }
